--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -17,6 +17,13 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/lib/fullcalendar/dist/fullcalendar.js"></script>
     <script src="~/lib/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+    
+ 
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/additional-methods.min.js"></script>
+    
+    
     <script src="~/js/site.js"></script>
     <script>
         $(document).ready(function () {
