--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                         </div>
                         <!-- render section fazer-->
                         <div class="well text-center" role="button">
-                            @RenderSection("Home", required: true);
+                            @RenderSection("Home", required: true)
                         </div>  
                         <div class="well text-center" role="button">
                             Programas Mobilidade
