--- a/ProjectoEsw/Views/Administrador/Index.cshtml
+++ b/ProjectoEsw/Views/Administrador/Index.cshtml
@@ -8,6 +8,16 @@
 @section Home {
     <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 }
+@section ProgramasMobilidade{
+    <a asp-area="" asp-controller="Candidato" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+}
+
+@section Bolsas{
+    <a asp-area="" asp-controller="Candidato" asp-action="Bolsas">Bolsas</a>
+}
+@section SobreNos{
+    <a asp-area="" asp-controller="Candidato" asp-action="SobreNos">Sobre Nós</a>
+}
 <div class="jumbotron col-sm-8">
         <h2 class=" text-center">Perfil do Administrador</h2>
         <div class="col-sm-12">
