--- a/ProjectoEsw/Views/Candidato/Index.cshtml
+++ b/ProjectoEsw/Views/Candidato/Index.cshtml
@@ -8,6 +8,15 @@
 @section Home{ 
 <a asp-area="" asp-controller="Candidato" asp-action="Index">Home</a>
 }
+@section ProgramasMobilidade{
+<a asp-area="" asp-controller="Candidato" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+}
+@section Bolsas{
+<a asp-area="" asp-controller="Candidato" asp-action="Bolsas">Bolsas</a>
+}
+@section SobreNos{
+<a asp-area="" asp-controller="Candidato" asp-action="SobreNos">Sobre Nós</a>
+}
 <div id="myCarousel" class="carousel slide col-sm-8" data-ride="carousel" data-interval="9000" >
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
