--- a/ProjectoEsw/Views/Home/ConfirmarEmail.cshtml
+++ b/ProjectoEsw/Views/Home/ConfirmarEmail.cshtml
@@ -11,6 +11,15 @@
 @section Home {
     <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 }
+@section ProgramasMobilidade{
+<a asp-area="" asp-controller="Home" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+}
+@section Bolsas{
+<a asp-area="" asp-controller="Home" asp-action="Bolsas">Bolsas</a>
+}
+@section SobreNos{
+<a asp-area="" asp-controller="Home" asp-action="SobreNos">Sobre Nós</a>
+}
 <div class="jumbotron">
     <h2 class=" text-center"><strong>ConfirmarEmail</strong></h2>
     <p><strong>Registo concluido. Para começar usar o website do CIMOB é necessario a validacao do seu email, para tal tera de se deslocar a caixa de correio do seu email onde tera o email com o link de validação </strong></p>
