--- a/ProjectoEsw/Views/Home/RecuperarPassword.cshtml
+++ b/ProjectoEsw/Views/Home/RecuperarPassword.cshtml
@@ -12,7 +12,15 @@
 @section Home {
     <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 }
-
+@section ProgramasMobilidade{
+    <a asp-area="" asp-controller="Home" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+}
+@section Bolsas{
+    <a asp-area="" asp-controller="Home" asp-action="Bolsas">Bolsas</a>
+}
+@section SobreNos{
+    <a asp-area="" asp-controller="Home" asp-action="SobreNos">Sobre Nós</a>
+}
 
 <div class="jumbotron col-sm-10 col-sm-offset-1">
     <span class="glyphicon glyphicon-question-sign" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaPagina("Home.RecuperarPassword").Descricao"></span>
