--- a/ProjectoEsw/Views/Home/ResetPassword.cshtml
+++ b/ProjectoEsw/Views/Home/ResetPassword.cshtml
@@ -12,6 +12,15 @@
 @section Home {
     <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 }
+@section ProgramasMobilidade{
+<a asp-area="" asp-controller="Home" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+}
+@section Bolsas{
+<a asp-area="" asp-controller="Home" asp-action="Bolsas">Bolsas</a>
+}
+@section SobreNos{
+<a asp-area="" asp-controller="Home" asp-action="SobreNos">Sobre Nós</a>
+}
 <div class="jumbotron col-sm-10 col-sm-offset-1">
     <div class="container col-lg-offset-2 col-sm-8">
         <h2 class="text-center">@ViewData["Title"]</h2>
