--- a/ProjectoEsw/Views/Home/index.cshtml
+++ b/ProjectoEsw/Views/Home/index.cshtml
@@ -8,7 +8,16 @@
     <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
  }
 @section Home {
-<a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+    <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+}
+@section ProgramasMobilidade{
+<a asp-area="" asp-controller="Home" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+}
+@section Bolsas{
+<a asp-area="" asp-controller="Home" asp-action="Bolsas">Bolsas</a>
+}
+@section SobreNos{
+<a asp-area="" asp-controller="Home" asp-action="SobreNos">Sobre Nós</a>
 }
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="9000">
     <ol class="carousel-indicators">
