--- a/ProjectoEsw/Views/Tecnico/Index.cshtml
+++ b/ProjectoEsw/Views/Tecnico/Index.cshtml
@@ -8,6 +8,9 @@
 @section Home {
     <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 }
+@section ProgramasMobilidade{
+    <a asp-area="" asp-controller="Candidato" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+}
 <div class="jumbotron col-sm-8">
     <h2 class=" text-center">Perfil do Tecnico</h2>
     <div class="col-sm-12">
