--- a/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
+++ b/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
@@ -11,7 +11,15 @@
 @section Home {
     <a asp-area="" asp-controller="Candidato" asp-action="Index">Home</a>
 }
-
+@section ProgramasMobilidade{
+    <a asp-area="" asp-controller="Candidato" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+}
+@section Bolsas{
+    <a asp-area="" asp-controller="Candidato" asp-action="Bolsas">Bolsas</a>
+}
+@section SobreNos{
+    <a asp-area="" asp-controller="Candidato" asp-action="SobreNos">Sobre Nós</a>
+}
 <div class="jumbotron col-sm-7 col-sm-offset-1">
     <span class="glyphicon glyphicon-question-sign" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaPagina("Home.EditarPerfil").Descricao"></span>
 
