--- a/ProjectoEsw/Views/Home/Error.cshtml
+++ b/ProjectoEsw/Views/Home/Error.cshtml
@@ -11,6 +11,15 @@
 @section Home {
     <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 }
+@section ProgramasMobilidade{
+<a asp-area="" asp-controller="Home" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+}
+@section Bolsas{
+<a asp-area="" asp-controller="Home" asp-action="Bolsas">Bolsas</a>
+}
+@section SobreNos{
+<a asp-area="" asp-controller="Home" asp-action="SobreNos">Sobre Nós</a>
+}
 <div class="jumbotron">
     <h2 class=" text-center"><strong>Erro</strong></h2>
     <p><strong>Aconteceu um erro inesperado, volte a tentar novamente </strong></p>
