--- a/ProjectoEsw/Views/Home/Login.cshtml
+++ b/ProjectoEsw/Views/Home/Login.cshtml
@@ -7,9 +7,17 @@
     <a asp-area="" asp-controller="Home" asp-action="Login" class="btn btn-link btn-xs pull-right">Login</a>
 }
 @section Home {
-<a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+    <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 }
-
+@section ProgramasMobilidade{
+<a asp-area="" asp-controller="Home" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+}
+@section Bolsas{
+<a asp-area="" asp-controller="Home" asp-action="Bolsas">Bolsas</a>
+}
+@section SobreNos{
+<a asp-area="" asp-controller="Home" asp-action="SobreNos">Sobre Nós</a>
+}
 <div class="jumbotron col-sm-10 col-sm-offset-1">
     <span class="glyphicon glyphicon-question-sign" data-toggle="popover" data-trigger="hover" data-content= "@gestorAjudas.BuscarAjudaPagina("Home.Login").Descricao"></span>
     <div class="container col-lg-offset-2 col-sm-8">
