--- a/ProjectoEsw/Views/Home/index.cshtml
+++ b/ProjectoEsw/Views/Home/index.cshtml
@@ -10,6 +10,10 @@
 @section Home {
 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 }
+<div>
+<p> esta é a hora do servidor </p> @System.DateTime.Now
+</div>
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="9000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
