--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -18,7 +18,9 @@
     <script src="~/lib/fullcalendar/dist/fullcalendar.js"></script>
     <script src="~/lib/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
     
- 
+    <script src="~/lib/fullcalendar/dist/locale/pt.js"></script>
+    <script src="~/lib/moment/locale/pt.js"></script>
+
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/lib/jquery-validation/dist/additional-methods.min.js"></script>
