--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -59,13 +59,13 @@
                             @RenderSection("Home", required: true)
                         </div>  
                         <div class="well text-center" role="button">
-                            Programas Mobilidade
+                            @RenderSection("ProgramasMobilidade", required: true)
                         </div>
                         <div class="well text-center" role="button">
-                            Bolsas
+                            @RenderSection("Bolsas", required: true)
                         </div>
                         <div class="well text-center" role="button">
-                            Sobre Nós
+                            @RenderSection("SobreNos", required: true)
                         </div>
                     </div>
                 </div>
