--- a/ProjectoEsw/Views/Candidato/ProgramasMobilidade.cshtml
+++ b/ProjectoEsw/Views/Candidato/ProgramasMobilidade.cshtml
@@ -18,14 +18,14 @@
 @section SobreNos{
     <a asp-area="" asp-controller="Candidato" asp-action="SobreNos">Sobre Nós</a>
 }
-<!--Home-->
+<!--Candidato-->
 <div class="jumbotron col-sm-5">
-    <h1>Erasmus+</h1>
+    <h3>Erasmus+</h3>
     <p> Resto Informacao + links + prazos</p>
-    <button type="submit" class="btn btn-default center-block">Candidatar-me</button>
+    <a asp-area="" asp-controller="Candidato" asp-action="CandidaturaErasmus" class="btn btn-default center-block">Candidatar-me</a>
 </div>
 <div class="jumbotron col-sm-5 col-sm-offset-1">
-    <h1>Programa Santander</h1>
+    <h3>Programa Santander</h3>
     <p> Resto Informacao + links + prazos</p>
-    <button type="submit" class="btn btn-default center-block">Candidatar-me</button>
+    <a asp-area="" asp-controller="Candidato" asp-action="CandidaturaSantander" class="btn btn-default center-block">Candidatar-me</a>
 </div>
