--- a/ProjectoEsw/Views/Candidato/AlterarCandidatura.cshtml
+++ b/ProjectoEsw/Views/Candidato/AlterarCandidatura.cshtml
@@ -26,7 +26,7 @@
 <div class="jumbotron col-sm-7 col-sm-offset-1">
     <span class="glyphicon glyphicon-question-sign" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaPagina("Home.EditarPerfil").Descricao"></span>
     <div class="container col-lg-offset-1 col-sm-10">
-        <h2 class="text-center">Alterar Candidatura </h2><!--Model.TipoCandidaturaFK TipoCandidatura virtual?-->
+        <h2 class="text-center">Alterar Candidatura @Model.TipoCandidatura.Tipo</h2><!--Model.TipoCandidaturaFK TipoCandidatura virtual?-->
         <form class="form-horizontal" asp-controller="Candidato" asp-action="Candidatura" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
