--- a/ProjectoEsw/Views/Candidato/CandidaturaSantander.cshtml
+++ b/ProjectoEsw/Views/Candidato/CandidaturaSantander.cshtml
@@ -27,7 +27,7 @@
     <span class="glyphicon glyphicon-question-sign" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaPagina("Candidato.Candidatura").Descricao"></span>
     <div class="container col-lg-offset-1 col-sm-10">
         <h2 class="text-center">Candidatura Santader Universidades</h2>
-        <form class="form-horizontal" asp-controller="Candidato" asp-action="Candidatura" method="post">
+        <form class="form-horizontal" asp-controller="Candidato" asp-action="CandidaturaSantander" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <p>Dados Pessoais</p>
@@ -125,6 +125,6 @@
     <h5 class="text-center">Opcoes</h5>
     <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
     <a asp-area="" asp-controller="Candidato" asp-action="EditarPerfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>
-    <a asp-area="" asp-controller="Candidato" asp-action="´VisualizarCandidatura" class="btn btn-link btn-xs pull-right col-sm-12">Ver Candidatura</a>
+    <a asp-area="" asp-controller="Candidato" asp-action="VisualizarCandidatura" class="btn btn-link btn-xs pull-right col-sm-12">Ver Candidatura</a>
 </div>
 
