--- a/ProjectoEsw/Views/Tecnico/ListaCandidaturas.cshtml
+++ b/ProjectoEsw/Views/Tecnico/ListaCandidaturas.cshtml
@@ -3,19 +3,19 @@
 
 @section links {
     <a asp-area="" asp-controller="Candidato" asp-action="Logout" class="btn btn-link btn-xs pull-right">Log Out</a>
-    <a asp-area="" asp-controller="Candidato" asp-action="perfil" class="btn btn-link btn-xs pull-right"> @Html.DisplayFor(model => model.Candidato.Email) </a>
+    <a asp-area="" asp-controller="Tecnico" asp-action="perfil" class="btn btn-link btn-xs pull-right"> @Html.DisplayFor(model => model.Candidato.Email) </a>
 }
 @section Home {
-    <a asp-area="" asp-controller="Candidato" asp-action="Index">Home</a>
+    <a asp-area="" asp-controller="Tecnico" asp-action="Index">Home</a>
 }
 @section ProgramasMobilidade{
-    <a asp-area="" asp-controller="Candidato" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
+    <a asp-area="" asp-controller="Tecnico" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
 }
 @section Bolsas{
-    <a asp-area="" asp-controller="Candidato" asp-action="Bolsas">Bolsas</a>
+    <a asp-area="" asp-controller="Tecnico" asp-action="Bolsas">Bolsas</a>
 }
 @section SobreNos{
-    <a asp-area="" asp-controller="Candidato" asp-action="SobreNos">Sobre Nós</a>
+    <a asp-area="" asp-controller="Tecnico" asp-action="SobreNos">Sobre Nós</a>
 }
 <div class="jumbotron col-sm-8">
     <h2 class=" text-center">Lista De Candidaturas</h2>
@@ -31,11 +31,11 @@
         }
     
     </div>
-    <a asp-area="" asp-controller="Candidato" asp-action="AnalisarCandidatura" class="btn btn-default btn-xs center-block col-sm-12">Analisar Candidatura</a>
+    <a asp-area="" asp-controller="Tecnico" asp-action="AnalisarCandidatura" class="btn btn-default btn-xs center-block col-sm-12">Analisar Candidatura</a>
 </div>
 <div class="jumbotron col-sm-3 col-sm-offset-1">
     <h5 class="text-center">Opcoes</h5>
-    <a asp-area="" asp-controller="Candidato" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
-    <a asp-area="" asp-controller="Candidato" asp-action="EditarPerfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>
-    <a asp-area="" asp-controller="Candidato" asp-action="Visualizar Candidatura" class="btn btn-link btn-xs pull-right col-sm-12">Lista Candidaturas</a>
+    <a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
+    <!--<a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>-->
+    <a asp-area="" asp-controller="Tecnico" asp-action="ListaCandidatura" class="btn btn-link btn-xs pull-right col-sm-12">Lista Candidaturas</a>
 </div>
