Ajuste views, adicao de actions candidato e tecnico

--- a/ProjectoEsw/Views/Candidato/SobreNos.cshtml
+++ b/ProjectoEsw/Views/Candidato/SobreNos.cshtml
@@ -1,4 +1,4 @@
-﻿@mo@model ProjectoEsw.Models.Identity.Perfil;
+﻿@model ProjectoEsw.Models.Identity.Perfil;
 
 @section links {
     <a asp-area="" asp-controller="Candidato" asp-action="Logout" class="btn btn-link btn-xs pull-right">Log Out</a>
@@ -19,15 +19,9 @@
     <a asp-area="" asp-controller="Candidato" asp-action="SobreNos">Sobre Nós</a>
 }
 <!--Home-->
-<div class="jumbotron col-sm-5">
-    <h1>Erasmus+</h1>
+<div class="jumbotron col-sm-8">
+    <h2>Sobre Nos</h2>
     <p> Resto Informacao + links + prazos</p>
-    <button type="submit" class="btn btn-default center-block">Candidatar-me</button>
-</div>
-<div class="jumbotron col-sm-5 col-sm-offset-1">
-    <h1>Programa Santander</h1>
-    <p> Resto Informacao + links + prazos</p>
-    <button type="submit" class="btn btn-default center-block">Candidatar-me</button>
 </div>
 <div class="jumbotron col-sm-3 col-sm-offset-1">
     <h5 class="text-center">Opcoes</h5>
