--- a/ProjectoEsw/Views/Tecnico/Index.cshtml
+++ b/ProjectoEsw/Views/Tecnico/Index.cshtml
@@ -1,65 +1,64 @@
 ﻿@model ProjectoEsw.Models.Identity.Perfil;
 
-
 @section links {
     <a asp-area="" asp-controller="Tecnico" asp-action="Logout" class="btn btn-link btn-xs pull-right">Log Out</a>
-   <!-- <a asp-area="" asp-controller="Tecnico" asp-action="Index" class="btn btn-link btn-xs pull-right"> @Html.DisplayFor(model => model.Email) </a>-->
+    <a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs pull-right"> @Html.DisplayFor(Model => Model.Email) </a>
+
 }
-@section Home {
+@section Home{
     <a asp-area="" asp-controller="Tecnico" asp-action="Index">Home</a>
 }
 @section ProgramasMobilidade{
     <a asp-area="" asp-controller="Tecnico" asp-action="ProgramasMobilidade">Programas Mobilidade</a>
 }
-<div class="jumbotron col-sm-8">
-    <h2 class=" text-center">Perfil do Tecnico</h2>
-    <div class="col-sm-12">
-        <label asp-for="NomeCompleto" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-3">
-            <h5>@Model.NomeCompleto</h5>
+@section Bolsas{
+    <a asp-area="" asp-controller="Tecnico" asp-action="Bolsas">Bolsas</a>
+}
+@section SobreNos{
+    <a asp-area="" asp-controller="Tecnico" asp-action="SobreNos">Sobre Nós</a>
+}
+<div id="myCarousel" class="carousel slide col-sm-8" data-ride="carousel" data-interval="9000">
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <img src="~/images/EramusExample.svg" alt="Eramus+" class="img-responsive" />
+        <div class="item">
+
+        </div>
+        <div class="item">
+
+        </div>
+        <div class="item">
+
         </div>
     </div>
-    <div class="col-sm-12">
-        <label asp-for="DataNasc" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-3">
-            <h5>@Model.DataNasc</h5>
-        </div>
-    </div>
-    
-    <div class="col-sm-12">
-        <label asp-for="Email" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-3">
-                <h5>@Model.Email</h5>           
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Nif" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-3">
-                <h5>@Model.Nif</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="NumeroIdentificacao" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-3">
-            <h5>@Model.NumeroIdentificacao</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Telefone" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-3">
-            <h5>@Model.Telefone</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Foto" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-3">
-            
-        </div>
-    </div>
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
+
 <div class="jumbotron col-sm-3 col-sm-offset-1">
     <h5 class="text-center">Opcoes</h5>
-    <a asp-area="" asp-controller="Tecnico" asp-action="Index" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
+    <a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
     <!--<a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>-->
     <a asp-area="" asp-controller="Tecnico" asp-action="ListaCandidatura" class="btn btn-link btn-xs pull-right col-sm-12">Lista Candidaturas</a>
 </div>
+
+
+@Html.Partial("Calendario", new ProjectoEsw.Models.Calendario.Eventos { });
+
+@section calendario{
+    <script>
+
+        CriarCalendario("Candidato", @Model.ID);
+    </script>
+    }
