--- a/ProjectoEsw/Views/Candidato/AlterarCandidatura.cshtml
+++ b/ProjectoEsw/Views/Candidato/AlterarCandidatura.cshtml
@@ -27,7 +27,7 @@
     <span class="glyphicon glyphicon-question-sign" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaPagina("Home.EditarPerfil").Descricao"></span>
     <div class="container col-lg-offset-1 col-sm-10">
         <h2 class="text-center">Alterar Candidatura @Model.TipoCandidatura.Tipo</h2><!--Model.TipoCandidaturaFK TipoCandidatura virtual?-->
-        <form class="form-horizontal" asp-controller="Candidato" asp-action="Candidatura" method="post">
+        <form class="form-horizontal" asp-controller="Candidato" asp-action="AlterarCandidatura" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <p>Dados Pessoais</p>
@@ -118,7 +118,7 @@
             <div class="form-group">
                 <div class="text-center">
                     <button type="submit" class="btn btn-default">Cancelar</button>
-                    <button type="submit" class="btn btn-default">Proximo</button>
+                    <button type="submit" class="btn btn-default">Alterar</button>
                 </div>
             </div>
         </form>
